TestCases/LLVMTests/SyntaxErrorTests/tests/test37.c
#include <stdio.h>

int main()
{
    float p = 3.14;
    float* q = &p;

    printf("%f %x %d ",3.14,p,7);
    printf("True %d \n ");

    printf("%s";"5");  // Syntaxt error ';'



    return 0;
}



